fix layout bugs

--- a/index.css
+++ b/index.css
@@ -29,6 +29,14 @@ ul {
     list-style: none;
 }
 
+body {
+    overflow: hidden;
+}
+
+.container {
+    width: 100vh;
+}
+
 img {
     max-width: 100%;
     height: auto;
@@ -36,7 +44,8 @@ img {
 
 .navBar {
     background-color: rgb(148, 253, 218);
-    height: 10vh;
+    height: 5em;
+    width: 100vw;
 }
 
 .logo {
@@ -48,19 +57,23 @@ img {
     width: 100%;
     font-size: 2em;
     position: absolute;
-    top: 1em;
-    left: 35em;
+    top: 0.7em;
+    left: 25em;
 }
+
 a {
     text-decoration: none;
-    margin-left:2em;
+    margin-left: 2em;
     color: #000;
     cursor: pointer;
+    border-radius: 0.5em;
 }
-a:hover{
-transition-duration: 0.5s;
-padding: 0.5%;
-background-color: aqua;
+
+a:hover {
+    transition-duration: 0.5s;
+    padding: 0.5%;
+    background-color: #eed15e;
+}
 
 body {
     background-color: #add8e6;
@@ -69,16 +82,24 @@ body {
 .content {
     display: flex;
     justify-content: center;
+    width: 100vw;
 }
 
 .pokemon {
     background-color: #fff;
     padding: 1em;
     margin: 1em;
+    border-radius: 1em;
+    cursor: pointer;
 }
 
-@media screen and (max-width: 1000px){
-    .content{
+.pokemon:hover {
+    transition-duration: 0.5s;
+    padding: 2em;
+}
+
+@media screen and (max-width: 1000px) {
+    .content {
         display: grid;
     }
 }
